Fixed code wrap to work with Safari.
git-svn-id: svn://svn.zenadmin.org/zena/trunk@1144 aaa19a3b-e121-0410-9d45-962fd44e537e

--- a/public/stylesheets/code.css
+++ b/public/stylesheets/code.css
@@ -51,7 +51,8 @@
 .css .class { color:orange;}
 
 
-pre code {
+.zazen pre {
+overflow:auto; /* Safari */
 white-space: pre-wrap; /* css-3 */
 white-space: -moz-pre-wrap !important; /* Mozilla, since 1999 */
 white-space: -pre-wrap; /* Opera 4-6 */
